@@ -1,3 +1,5 @@
+2025-09-16
+    Added constant to control RU locations support
 2025-09-01
     Added proper transaction management to prevent hanging MySQL transactions during import
 2025-08-01
